--- a/style.css
+++ b/style.css
@@ -346,38 +346,75 @@ a:focus {
   position: sticky;
   background-position: center;
   background-size: cover;
-  animation: image 15s infinite alternate;
-  height: 500px;
-  width: 550px;
-  border-radius: 25px;
-  margin-top: -50px;
+  border-radius: 15px;
+  width: 500px;
+  height: 300px;
+  margin: auto;
+  overflow: hidden;
+  margin-top: 25px;
+  box-shadow: rgba(0, 0, 0, 0.07) 0px 1px 2px, rgba(0, 0, 0, 0.07) 0px 2px 4px, rgba(0, 0, 0, 0.07) 0px 4px 8px, rgba(0, 0, 0, 0.07) 0px 8px 16px, rgba(0, 0, 0, 0.07) 0px 16px 32px, rgba(0, 0, 0, 0.07) 0px 32px 64px;
 }
 
-@keyframes image {
+@-webkit-keyframes keyframes-slideshow {
   0% {
-    background-image: url('/img/gallery/06.jpg');
+    margin-left: 0;
   }
-
-  20% {
-    background-image: url('/img/gallery/15.jpg');
+  25% {
+    margin-left: -500px;
   }
-
-  40% {
-    background-image: url('/img/gallery/55.jpg');
+  50% {
+    margin-left: -1000px;
   }
-
-  60% {
-    background-image: url('/img/gallery/32.jpg');
+  75% {
+    margin-left: -1500px;
   }
-
-  80% {
-    background-image: url('/img/gallery/52.jpg');
-  }
-
   100% {
-    background-image: url('/img/gallery/20.jpg');
+    margin-left: 0px;
   }
 }
+
+@keyframes keyframes-slideshow {
+  0% {
+    margin-left: 0;
+  }
+  25% {
+    margin-left: -500px;
+  }
+  50% {
+    margin-left: -1000px;
+  }
+  75% {
+    margin-left: -1500px;
+  }
+  100% {
+    margin-left: 0px;
+  }
+}
+.slideshow {
+  display: block;
+  width: 5000px;
+  -webkit-animation-name: keyframes-slideshow;
+          animation-name: keyframes-slideshow;
+  -webkit-animation-duration: 15s;
+          animation-duration: 15s;
+  -webkit-animation-iteration-count: infinite;
+          animation-iteration-count: infinite;
+  -webkit-animation-timing-function: ease-in-out;
+          animation-timing-function: ease-in-out;
+  
+}
+
+.slideshow img {
+  width: 500px;
+  height: 300px;
+  -o-object-fit: cover;
+     object-fit: cover;
+  float: left;
+}
+
+
+
+
 
 .maintext {
   width: 400px;
